# openapi.yaml
@@ -3,14 +3,14 @@
 
 openapi: 3.0.3
 info:
-    title: Shakespeare API
+    title: Query API
     version: 0.0.1
 paths:
     /v1/wordcount:
         get:
             tags:
-                - Shakespeare
-            operationId: Shakespeare_QueryWordCount
+                - Query
+            operationId: Query_QueryWordCount
             parameters:
                 - name: word
                   in: query
@@ -87,4 +87,4 @@ components:
                     description: A list of messages that carry the error details.  There is a common set of message types for APIs to use.
             description: 'The `Status` type defines a logical error model that is suitable for different programming environments, including REST APIs and RPC APIs. It is used by [gRPC](https://github.com/grpc). Each `Status` message contains three pieces of data: error code, error message, and error details. You can find out more about this error model and how to work with it in the [API Design Guide](https://cloud.google.com/apis/design/errors).'
 tags:
-    - name: Shakespeare
+    - name: Query
